// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY juYbEV"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY bhlIdS"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY iEgKdo"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY kFvXnz"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY jojXJg"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY hjVnXS"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY juYbEV"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY bhlIdS"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY iEgKdo"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY juYbEV"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY bhlIdS"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY iEgKdo"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY juYbEV"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY bhlIdS"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY iEgKdo"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY juYbEV"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV cOFPug"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY bhlIdS"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV cOFPug"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY iEgKdo"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-erijoS kPCrAG"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV cOFPug"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY juYbEV"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY bhlIdS"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY fYEEqt"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY febtqu"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <div
      className="sc-hixjlP cPCvAT"
    >
      <input
        className="sc-eZceyY nbzcd"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP kJWjmt"
    >
      <input
        className="sc-eZceyY iEgKdo"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
      <div
        className="sc-fDnMV iaIvqn"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
